# StoreData

./: .gitignore  CMakeLists.txt  README.md  StoreDataConfigVersion.cmake.in  index.html  link.txt  params.json
StoreData/: StoreData.cpp  StoreData.hpp  empty_cmake.cpp  storedata_defines.hpp
configure/linux/: build and make.sh  configure.sh
configure/win/: 0. configure.bat  1. create_slns VS2019.bat  1. create_slns.bat  1. create_slns_list.bat  2. build_slns VS2019.bat  2. build_slns.bat  2. build_slns_list.bat  900. clear cache.bat  buildlist.txt  createlist.txt
doc/: first_draft.txt
module/: CMakeLists.txt
module/buffer/: CMakeLists.txt  buffer_headers.hpp
module/buffer/inc/buffer/: AtomicContainerData.hpp  AtomicContainerDataFaster.hpp  AtomicContainerDataInherit.hpp  DataDesynchronizerGeneric.hpp  DataDesynchronizerGenericFaster.hpp  DataDesynchronizerGenericInherit.hpp  MicroBuffer.hpp  VolatileTimedBuffer.hpp  buffer_defines.hpp
module/buffer/src/buffer/: AtomicContainerData.cpp  AtomicContainerDataFaster.cpp  DataDesynchronizerGeneric.cpp  DataDesynchronizerGenericFaster.cpp  DataDesynchronizerGenericInherit.cpp  VolatileTimedBuffer.cpp
module/codify/: CMakeLists.txt  codify.hpp
module/codify/inc/codify/: CodifyImage.hpp  codify_data.hpp  codify_defines.hpp  codify_headers.hpp  packunpack_images.hpp
module/codify/src/codify/: CodifyImage.cpp  codify_data.cpp  packunpack_images.cpp
module/core/: storedata_defines.hpp.in
module/logger/: CMakeLists.txt  logger_headers.hpp
module/logger/inc/logger/: log.hpp  logger_defines.hpp
module/logger/src/logger/: log.cpp
module/record/: CMakeLists.txt  record_headers.hpp
module/record/inc/record/: PlayerRecorder.hpp  RawRecorder.hpp  RawRecorder.inl  create_base.hpp  create_file.hpp  create_video.hpp  lib_configuration.hpp.in  record_defines.hpp  recordcontainer.hpp  recordcontainerbase.hpp  recordcontainerfile.hpp  recordcontainervideo.hpp  storedata_time.hpp  storedata_typedef.hpp
module/record/src/record/: PlayerRecorder.cpp  RawRecorder.cpp  create_file.cpp  create_video.cpp  recordcontainer.cpp  recordcontainerfile.cpp  recordcontainervideo.cpp  storedata_time.cpp
module/version/: version.hpp.in
module/video/: CMakeLists.txt  video_headers.hpp
module/video/inc/video/: EnhanceAsyncRecorderManager.hpp  video_defines.hpp
module/video/src/video/: EnhanceAsyncRecorderManager.cpp
sample/: CMakeLists.txt  UDPKomatsu2Arm.hpp  sample_DataDesynchronizerGeneric.cpp  sample_DataDesynchronizerGenericFaster.cpp  sample_DataDesynchronizerGenericInherit.cpp  sample_EnhanceAsyncRecorderManager.cpp  sample_PlayerRecorder.cpp  sample_buffering.cpp  sample_codify.cpp  sample_codify_codifydata.cpp  sample_codify_codifydata_obsolete.cpp  sample_codify_packunpackimages.cpp  sample_create_file.cpp  sample_create_video.cpp  sample_logger.cpp  sample_rawrecord.cpp  sample_rawrecord_serialized.cpp  sample_rawrecorder.cpp  sample_rawrecorder_serialized.cpp  sample_rawrecorder_zip.cpp  sample_record_container.cpp  sample_record_container_file.cpp  sample_record_container_generic.cpp  sample_record_container_video.cpp  sample_record_saveplayfile.cpp  sample_record_saveplayfile_avi.cpp  sample_record_saveplayfile_avi_v2.cpp  sample_record_saveplayfile_dat.cpp  sample_volatile_timed_buffer.cpp
